Minor changes to response in notebook

--- a/Week 1/Day 2/Accessing_OpenAI_Like_a_Developer_AIMS_(Assignment_Version).ipynb
+++ b/Week 1/Day 2/Accessing_OpenAI_Like_a_Developer_AIMS_(Assignment_Version).ipynb
@@ -934,9 +934,9 @@
       "source": [
         "> The task I chose is certainly a hard one for the evaluator LLM. How do you rate clarity, faithfulness and correctness of a tweet? I had the impression that my changes in strategies in the system and user prompts did little to affect the evaluator response. \n",
         "\n",
-        "One thing I could not get the LLM to do was to limit the response to 140 characters, although the tweets it produced were all good summaries of the original text and in a good format for Twitter overall.\n",
+        "> I tried, but I could not get the LLM to do was to limit the response to 140 characters, although the tweets it produced were all good summaries of the original text and in a good format for Twitter overall.\n",
         "\n",
-        "One thing that I could not see much difference was changing the system prompt versus the user prompt, at least in this task."
+        "> One thing that I could not see much difference was changing the system prompt versus the user prompt, at least in this task."
       ]
     }
   ],
