--- a/Week 2/Day 1/Pythonic_RAG_Assignment.ipynb
+++ b/Week 2/Day 1/Pythonic_RAG_Assignment.ipynb
@@ -1242,7 +1242,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 55,
+      "execution_count": 61,
       "metadata": {},
       "outputs": [
         {
@@ -1256,18 +1256,18 @@
         {
           "data": {
             "text/plain": [
-              "{'response': 'The \"Michael Eisner Memorial Weak Executive Problem\" refers to a situation where a CEO or startup founder hires a weak executive in a specific area, such as product management, sales, or marketing, because they have a hard time letting go of the function that originally brought them success. This can result in hiring executives who are not strong in their roles, potentially hindering the success of the company. The term is named after Michael Eisner, the former CEO of Disney, who faced a similar issue when the network he previously excelled in fell to fourth place after he took over ABC at Disney.',\n",
+              "{'response': 'The \"Michael Eisner Memorial Weak Executive Problem\" refers to a situation where a CEO or startup founder hires a weak executive for a specific function in their organization because they have a hard time letting go of that function themselves. This can occur when the CEO or founder previously excelled in that role and wants to maintain control. The term is named after Michael Eisner, the CEO of Disney, who struggled with this issue when he bought ABC and faced challenges due to weak executives in certain areas.',\n",
               " 'context': [('ordingly.\\nSeventh, when hiring the executive to run your former specialty, be\\ncareful you don’t hire someone weak on purpose.\\nThis sounds silly, but you wouldn’t believe how oaen it happens.\\nThe CEO who used to be a product manager who has a weak\\nproduct management executive. The CEO who used to be in\\nsales who has a weak sales executive. The CEO who used to be\\nin marketing who has a weak marketing executive.\\nI call this the “Michael Eisner Memorial Weak Executive Problem” — aaer the CEO of Disney who had previously been a brilliant TV network executive. When he bought ABC at Disney, it\\npromptly fell to fourth place. His response? “If I had an extra\\ntwo days a week, I could turn around ABC myself.” Well, guess\\nwhat, he didn’t have an extra two days a week.\\nA CEO — or a startup founder — oaen has a hard time letting\\ngo of the function that brought him to the party. The result: you\\nhire someone weak into the executive role for that function so\\nthat you can continue to be “the man” — cons',\n",
-              "   0.8267536759376526),\n",
+              "   0.6582379477017),\n",
               "  ('m. They have areas where they are truly deXcient in judgment or skill set. That’s just life. Almost nobody is brilliant\\nat everything. When hiring and when Hring executives, you\\nmust therefore focus on strength rather than lack of weakness. Everybody has severe weaknesses even if you can’t see\\nthem yet. When managing, it’s oaen useful to micromanage and\\nto provide remedial training around these weaknesses. Doing so\\nmay make the diWerence between an executive succeeding or\\nfailing.\\nFor example, you might have a brilliant engineering executive\\nwho generates excellent team loyalty, has terriXc product judgment and makes the trains run on time. This same executive\\nmay be very poor at relating to the other functions in the company. She may generate far more than her share of cross-functional conYicts, cut herself oW from critical information, and\\nsigniXcantly impede your ability to sell and market eWectively.\\nYour alternatives are:\\n(a) Macro-manage and give her an annual or quarterly object',\n",
-              "   0.991106390953064),\n",
+              "   0.5088534701603749),\n",
               "  ('ed?\\nIn reality — as opposed to Marc’s warped view of reality — it will\\nbe extremely helpful for Marc [if he were actually the CEO,\\nwhich he is not] to meet with the new head of engineering daily\\nwhen she comes on board and review all of her thinking and\\ndecisions. This level of micromanagement will accelerate her\\ntraining and improve her long-term eWectiveness. It will make\\nher seem smarter to the rest of the organization which will build\\ncredibility and conXdence while she comes up to speed. Micromanaging new executives is generally a good idea for a limited\\nperiod of time.\\nHowever, that is not the only time that it makes sense to micro66 The Pmarca Blog Archives\\nmanage executives. It turns out that just about every executive\\nin the world has a few things that are seriously wrong with\\nthem. They have areas where they are truly deXcient in judgment or skill set. That’s just life. Almost nobody is brilliant\\nat everything. When hiring and when Hring executives, you\\nmust therefore focus o',\n",
-              "   1.0207455158233643),\n",
+              "   0.4790389309161398),\n",
               "  ('nYicts, cut herself oW from critical information, and\\nsigniXcantly impede your ability to sell and market eWectively.\\nYour alternatives are:\\n(a) Macro-manage and give her an annual or quarterly objective\\nto Xx it, or…\\n(b) Intensively micromanage her interactions until she learns\\nthe fundamental interpersonal skills required to be an eWective\\nexecutive.\\nI am arguing that doing (a) will likely result in weak performance. The reason is that she very likely has no idea how to be\\neWective with her peers. If somebody is an executive, it’s very\\nlikely that somewhere along the line somebody gave her feedback — perhaps abstractly — about all of her weaknesses. Yet\\nthe weakness remains. As a result, executives generally require\\nmore hands-on management than lower level employees to\\nimprove weak areas.\\nSo, micromanagement is like Xne wine. A little at the right times\\nwill really enhance things; too much all the time and you’ll end\\nup in rehab.\\nPart 8: Hiring, managing, promoting, and Dring execut',\n",
-              "   1.031368374824524)]}"
+              "   0.46813853116711357)]}"
             ]
           },
-          "execution_count": 55,
+          "execution_count": 61,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -1281,7 +1281,7 @@
         "\n",
         "# I'm using an enhanced version of the VectorDB that uses a different retrieval strategy for searching\n",
         "evector_db = EnhancedVectorDatabase()\n",
-        "evector_db = asyncio.run(evector_db.abuild_from_list(split_documents[0:3]))\n",
+        "evector_db = asyncio.run(evector_db.abuild_from_list(split_documents))\n",
         "evector_db.build_index()\n",
         "\n",
         "eretrieval_augmented_qa_pipeline = RetrievalAugmentedQAPipeline(\n",
