New line change

--- a/Week 2/Day 1/Pythonic_RAG_Assignment.ipynb
+++ b/Week 2/Day 1/Pythonic_RAG_Assignment.ipynb
@@ -1318,7 +1318,7 @@
     "\n",
     "<img src=\"./EnhancedRAQAdiagram.png\" alt='Enhanced RAQA diagram' />\n",
     "\n",
-    "The only change with regards to the original application is the Vector Database, which has been replaced by my own, but keeping basically the same API as before. This Enhanced Vector Database relies on the library Annoy to implement Aproximate Near Neighbours search. It offers more distance measures that can be used to search for similar documents, not only cosine distance. The class requires that the distance measure is specified at initialization (defaults to cosine distance), and before anything can be searched, we need to run the build_index() function\n",
+    "The only change with regards to the original application is the Vector Database, which has been replaced by my own, but keeping basically the same API as before. This Enhanced Vector Database relies on the library Annoy to implement Aproximate Near Neighbours search. It offers more distance measures that can be used to search for similar documents, not only cosine distance. The class requires that the distance measure is specified at initialization (defaults to cosine distance), and before anything can be searched, we need to run the build_index() function.\n",
     "\n",
     "---"
    ]
